Deixando o cérebro responsivo.

--- a/color-cerebro/cerebro.html
+++ b/color-cerebro/cerebro.html
@@ -14,11 +14,13 @@
 </head>
 
 <body>
-    <div class="cerebro-box">
-        <section id="cerebro-image">
-        </section>
+    <div class="col-md">
+        <figure class="container-img">
+            <section id="cerebro-image">
+                <img src="/assets/images/cerebro.png">
+            </section>
+        </figure>
     </div>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
